change color of scrollbar & fix animation for submit button hover in Contact

--- a/src/pages/Contact/styles.scss
+++ b/src/pages/Contact/styles.scss
@@ -214,7 +214,7 @@
           }
 
           &:hover {
-            .contact__form__submit__label {
+            .contact__container__form__submit__label {
               opacity: 1;
               transform: translateX(-2em);
             }
